# dedbg

./: Cargo.toml  Justfile  LICENSE  README.md  build.rs
fixtures/: double.in.rs  double.out.rs  expr.in.rs  expr.out.rs  hello.in.rs  nested.in.rs  nested.out.rs
pkg/: dedbg.spec
src/: cli.rs  main.rs  test.rs
src/find/: mod.rs
