[package]
name = "dedbg"
version = "0.1.1"
edition = "2021"
authors = [
  "eulegang"
]

description = "find and remove dbg! macro usage"
repository = "https://github.com/eulegang/dedbg"

license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = "0.20"
clap = { version = "3.1", features = [ "derive" ] }
walkdir = "2"
eyre = "0.6"

[build-dependencies]
cc="1.0"

[dev-dependencies]
pretty_assertions="1.3"

